--- a/vchips/src/index.css
+++ b/vchips/src/index.css
@@ -15,3 +15,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.color-0 { background-color: #306b34; }
+.color-1 { background-color: #161032; }
+.color-2 { background-color: #007ea7; }
+.color-3 { background-color: #8ff7a7; }
+.color-4 { background-color: #e85d75; }
