--- a/vchips/src/index.css
+++ b/vchips/src/index.css
@@ -44,6 +44,15 @@ code {
 .container-disconnected { animation: 0.4s ease-in-out infinite alternate blinding-border-disconnected; }
 .container-my-turn { animation: 2s ease-in-out infinite alternate blinding-border-my-turn; }
 
+.showdown-button-pulse { animation: 1s ease-in-out infinite alternate showdown-button-pulse; }
+
+@keyframes showdown-button-pulse {
+  0% { transform: scale(1); }
+  50% { transform: scale(1.1); }
+  100% { transform: scale(1); }
+}
+
+
 @keyframes rainbow {
   from { background-color: hsl(0, 76%, 80%); }
   20% { background-color: hsl(72, 76%, 80%); }
